--- a/backend/package.json
+++ b/backend/package.json
@@ -46,7 +46,6 @@
     "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "pm2": "^5.4.0"
+    "nodemon": "^3.1.9"
   }
 }
